[metadata]
name = k8sapp-cert-manager
summary = StarlingX sysinv extensions for cert-manager
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = https://www.starlingx.io/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    k8sapp_cert_manager

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
systemconfig.helm_applications =
    cert-manager = systemconfig.helm_plugins.cert_manager

systemconfig.helm_plugins.cert_manager =
    001_cert-manager = k8sapp_cert_manager.helm.cert_manager:CertMgrHelm

systemconfig.app_lifecycle =
    cert-manager = k8sapp_cert_manager.lifecycle.lifecycle_cert_manager:CertManagerAppLifecycleOperator

[bdist_wheel]
universal = 1
